syntax = "proto3";

package game;

enum PacketID {
// Client → Server
    CS_Attack = 0;
    CS_ChangeWeapon = 1;
    CS_GrenadeExplositionPos = 2;
    CS_ItemPicked = 3;
    CS_KeyInput = 4;
    CS_PosInterpolation = 5;
    CS_RequestRestart = 6;
    CS_SendNickname = 7;
    CS_ShotHit = 8;
    CS_ThrowGrenade = 9;

// Server → Client
    SC_Attack = 10;
    SC_ChangeWeapon = 11;
    SC_CharacterDown = 12;
    SC_CharacterKillLog = 13;
    SC_CreateMyCharacter = 14;
    SC_CreateOtherCharacter = 15;
    SC_GrenadeExplositionPos = 16;
    SC_ItemPickFail = 17;
    SC_ItemPickSuccess = 18;
    SC_ItemSpawned = 19;
    SC_KeyInput = 20;
    SC_OnAccept = 21;
    SC_PosInterpolation = 22;
    SC_ShotHit = 23;
    SC_ThrowGrenade = 24;
}

message CS_ATTACK {
    bool bAttack = 1; // 임의의 변수, 의미 없음.
    uint32 normalX = 2; // 이펙트의 노멀 벡터
    uint32 normalY = 3;
    uint32 normalZ = 4;
    uint32 posX = 5; // 이펙트가 터질 위치
    uint32 posY = 6;
    uint32 posZ = 7;
}
message CS_CHANGE_WEAPON {
    uint32 weapon = 1; // 무기 교체
}
message CS_GRENADE_EXPLOSITION_POS {
    uint32 posX = 1; // 터질 위치
    uint32 posY = 2;
    uint32 posZ = 3;
}
message CS_ITEM_PICKED {
    uint32 itemId = 1; // 획득 시도한 아이템의 정보
}
message CS_KEY_INPUT {
    uint32 keyW = 1; // 키(WASD)
    uint32 keyA = 2;
    uint32 keyS = 3;
    uint32 keyD = 4;
    fixed32 rotateAxisX = 5; // 마우스 X축 회전값
    fixed32 rotateAxisY = 6; // 마우스 Y축 회전값
    uint32 Jump = 7; // 점프 여부
}
message CS_POS_INTERPOLATION {
    uint32 posX = 1; // 플레이어의 현재 위치
    uint32 posY = 2;
    uint32 posZ = 3;
}
message CS_REQUEST_RESTART {
    uint32 playerId = 1; // 플레이어의 고유 ID
    uint32 weapon = 2; // 들고 있는 무기 정보
}
message CS_SEND_NICKNAME {
    string name = 1; // 최대 20자 유니코드 문자열 (실제 제한은 코드로 처리, 제한은 필요할때 늘리면 됨)
}
message CS_SHOT_HIT {
    uint32 playerId = 1; // 피격 대상
    uint32 hp = 2; // 피격 대상의 남은 HP
}
message CS_THROW_GRENADE {
    uint32 posX = 1; // 던지기 시작 위치
    uint32 posY = 2;
    uint32 posZ = 3;
    fixed32 dirX = 4; // 던지는 방향
    fixed32 dirY = 5;
    fixed32 dirZ = 6;
}
message KDAInfo {
    uint32 kill = 1;
    uint32 death = 2;
    uint32 assist = 3;
}
message PlayerInfo {
    uint32 playerId = 1;
    KDAInfo kda = 2;
}
message SC_ATTACK {
    uint32 playerId = 1; // CS_ATTACK을 전송한 플레이어 Id를 방에 있는 모든 플레이어들에게 전송
    uint32 normalX = 2; // 이펙트의 노멀 벡터
    uint32 normalY = 3;
    uint32 normalZ = 4;
    uint32 posX = 5; // 이펙트가 터질 위치
    uint32 posY = 6;
    uint32 posZ = 7;
}
message SC_CHANGE_WEAPON {
    uint32 playerId = 1; // 다른 캐릭터 ID
    uint32 weapon = 2; // 무기 교체
}
message SC_CHARACTER_DOWN {
    uint32 playerId = 1; // 서버로 부터 부여받은 ID
    uint32 teamID = 2; // 접속한 팀 ID
}
message SC_CHARACTER_KILL_LOG {
    repeated PlayerInfo playerInfoList = 1; // 모든 플레이어들의 KDA 정보
}
message SC_CREATE_MY_CHARACTER {
    uint32 playerId = 1; // 서버로 부터 부여받은 ID
    uint32 posIndex = 2; // 생성될 위치 인덱스 정보
    uint32 maxHP = 3; // 최대 Hp
    uint32 teamID = 4; // 접속한 팀 ID
}
message SC_CREATE_OTHER_CHARACTER {
    uint32 playerId = 1; // 서버로 부터 부여받은 ID
    uint32 posIndex = 2; // 생성될 위치 인덱스 정보
    uint32 maxHP = 3; // Hp
    uint32 curHP = 4;
    string name = 5; // 이름
    KDAInfo kdaInfo = 6; // KDA 정보
    uint32 weapon = 7; // 들고 있는 무기 정보
    uint32 teamID = 8; // 접속한 팀 ID
}
message SC_GRENADE_EXPLOSITION_POS {
    uint32 posX = 1; // 터질 위치
    uint32 posY = 2;
    uint32 posZ = 3;
}
message SC_ITEM_PICK_FAIL {
    uint32 playerId = 1; // 획득 실패한 플레이어의 고유 ID
    uint32 itemId = 2; // 아이템의 고유 ID
}
message SC_ITEM_PICK_SUCCESS {
    uint32 playerId = 1; // 획득한 플레이어의 고유 ID
    uint32 itemId = 2; // 아이템의 고유 ID
}
message SC_ITEM_SPAWNED {
    uint32 itemId = 1; // 생성될 아이템의 고유 ID
    uint32 itemType = 2; // 생성될 아이템의 타입
    uint32 itemPosIndex = 3; // 아이템이 생성될 장소에 대한 정보
}
message SC_KEY_INPUT {
    uint32 playerId = 1;
    uint32 keyW = 2; // 키(WASD)
    uint32 keyA = 3;
    uint32 keyS = 4;
    uint32 keyD = 5;
    fixed32 rotateAxisX = 6; // 마우스 X축 회전값
    fixed32 rotateAxisY = 7; // 마우스 Y축 회전값
    uint32 Jump = 8; // 점프 여부
}
message SC_ON_ACCEPT {
    uint32 playerId = 1; // 서버로 부터 부여받은 ID
}
message SC_POS_INTERPOLATION {
    uint32 posX = 1; // 플레이어의 현재 위치
    uint32 posY = 2;
    uint32 posZ = 3;
}
message SC_SHOT_HIT {
    uint32 playerId = 1; // 피격 대상
    uint32 hp = 2; // 피격 대상의 남은 HP
}
message SC_THROW_GRENADE {
    uint32 posX = 1; // 던지기 시작 위치
    uint32 posY = 2;
    uint32 posZ = 3;
    fixed32 dirX = 4; // 던지는 방향
    fixed32 dirY = 5;
    fixed32 dirZ = 6;
}
